* release 0.2.9b
	- added PSX hint screens

* release 0.2.9
	- added PSP and Wii platforms specific code
	- added support for PC demo v1.0 data files
	- fixed screen state for 'fort' screens 16 and 17
	- fixed checkpoint for 'pwr1' screen 21
	- fixed PAF animation glitches with last frame

* release 0.2.8
	- added PSX background overlays (MDEC)
	- fixed crash playing PAF animation #3 with Italian PC data files

* release 0.2.7
	- added 'projection' submenu
	- added PSX backgrounds (MDEC)
	- fixed menu on big endian platforms

* release 0.2.6
	- added initial code for menu
	- added PSX sounds (SPU ADPCM)
	- fixed skull animation in 'rock' screen 18

* release 0.2.5
	- fixed spiders and worms movement
	- several fixes for big endian platforms

* release 0.2.4
	- fixed Amigo walk path in 'pwr2' screen 7
	- fixed glowing stone puzzle in 'lar2'
	- fixed missing trigger for switch #0 in 'lar1'

* release 0.2.3
	- fixed double spectre fireball animations in 'lar1' and 'lar2'
	- fixed level transition from 'pwr1' to 'isld'
	- fixed screen state for 'lava' screen 15

* release 0.2.2
	- fixed lever in 'lava' level screen 2
	- fixed masking with plants in 'pwr1' level
	- fixed missing explosion animation with fireballs
	- fixed screen mask in 'lar2' level screen 7

* release 0.2.1
	- added initial code for PSX data files detection
	- fixed sprite infinite looping in 'pwr1' level screen 23
	- several fixes to gates and switches in 'lar1' and 'lar2' levels

* release 0.2.0
	- added missing postScreenUpdate callbacks for 'lava' level
	- fixed crash at beginning of 'lar1' level
	- fixed gamma ramp with widescreen borders
	- several fixes to gates handling in 'lar1' and 'lar2' levels

* release 0.1.9
	- fixed fireballs not hitting Andy
	- fixed fishes movement in 'pwr1' and 'pwr2' levels
	- fixed several bounding box clipping checks
	- fixed sounds panning

* release 0.1.8
	- added specific callbacks for 'lar1' and 'lar2' levels
	- fixed infinite loop in .mst op27