@@ -16,7 +16,7 @@ disable_menu=false
 # maximum number of active sounds (original engine sets to 10 if a slow CPU or low memory is detected)
 max_active_sounds=16
 
-# default difficulty when bypassing menu (0:easy 1:normal 2:hard)
+# default difficulty when bypassing menu (2:easy 1:normal 0:hard)
 difficulty=1
 
 # frame duration in milliseconds (original is 80ms, eg. 12.5hz)
