@@ -1,5 +1,6 @@
 * release 0.2.9b
 	- added PSX hint screens
+	- added 'volume' submenu
 
 * release 0.2.9
 	- added PSP and Wii platforms specific code
